--- a/Etthu.html
+++ b/Etthu.html
@@ -91,7 +91,7 @@
     <p><strong>Shapu Yama</strong>Hias Home</p>
     <p><strong>Gundusale</strong> His aura His fame Its his nick name</p>
     <p><strong>Ep</strong> His forgotten nick name</p>
-    <div class="card"><img src="2.JPG" alt="Yama kun">
+    <div class="card"><img src="3.png" alt="Yama kun">
 
     </section>
 
@@ -105,5 +105,6 @@
 
 </body>
 </html>
+
 
 
